--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "solidity.compileUsingRemoteVersion": "v0.8.27+commit.40a35a09",
-  "cSpell.words": ["Siga"]
+  "cSpell.words": ["factorycontract", "Siga"]
 }
